Tue Jan 15 15:25:10 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Fixed year lag on me and Arnaud in ChangeLog. We where stuck in 2007.
    And some dates. Thanks to Janos Farkas

Tue Jan 15 06:59:00 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Added line in nut-usbups.rules.in for Powerware 3110 5115 and 9120 using
   the old interface.(Also fixed a day problem in ChangeLog)

Mon Jan 14 22:20:44 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: changed default subdriver for Unitek Alpha
   1200Sx to phoenix.

Mon Jan 14 20:49:48 UTC 2008 / Peter Selinger <selinger@users.sourceforge.net>

 - upsdrvctl: pass "-u" flag to the driver also in shutdown mode. Print
   actual command line when debugging.
	
Wed Jan 10 14:37:34 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * mge-xml: new experimental driver for MGE (Office Protection Systems
   and UPS Systems) Network Management Cards and Proxy.
   This driver use the same HID core as usbhid-ups and newmge-shut
   and its development is sponsored by MGE Office Protection Systems.
   The ezXML parser has been embedded in the source to allow the
   driver development (dual licensed under MIT + GPL).

Sat Jan 12 16:15:00 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed <stdint.h> to "nut_stdint.h" in nut_usb.c. Pointed out by Arjen. 

Sat Jan 12 15:44:43 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/hidparser.c: The changes in r1210 broke the calculation of the size
   of reports, so this change is reverted.
 - drivers/libhid.c: Check if the HID Path ends in 0x00000000 and if so, assume
   this variable isn't used and don't update it when we receive an update over
   the interrupt pipeline. Optimized the order in which we determine if a
   variable needs updating so that the most restrictive tests are done first.

Thu Jan 10 16:57:50 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>
