@@ -1,3 +1,11 @@
+Fri Jan 18 14:03:01 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>
+
+ * snmp-ups:
+   - mgemib.h: add support for MGE* Environment Sensor (ref 66 846).
+     This adds the data ambient.temperature and ambient.humidity.
+   - snmp-ups.c: fix the handling of multiplier on ambient.temperature
+     for units other than APC.
+
 Tue Jan 15 15:25:10 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>
 
  - Fixed year lag on me and Arnaud in ChangeLog. We where stuck in 2007.
